hack/offline/must-gather-test-data/quay-io-maistra-istio-must-gather-sha256-6576697cc3f0d7657e7a472f5eb2058f0a4af5d56f795d277ea88eb450b8cd61/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/istio-validator-istio-system.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: default-istiod
    meta.helm.sh/release-namespace: istio-system
  creationTimestamp: "2025-07-15T19:28:11Z"
  generation: 25
  labels:
    app: istiod
    app.kubernetes.io/instance: default-istiod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istiod
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.26.2
    helm.sh/chart: istiod-1.26.2
    istio: istiod
    istio.io/rev: default
    managed-by: sail-operator
    release: default-istiod
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"rev.validation.istio.io"}:
          f:clientConfig:
            f:caBundle: {}
          f:failurePolicy: {}
    manager: pilot-discovery
    operation: Update
    time: "2025-07-15T19:29:46Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
          f:istio: {}
          f:istio.io/rev: {}
          f:managed-by: {}
          f:release: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"7dcc2e5a-4806-4fbb-b8c7-d8ff38160463"}: {}
      f:webhooks:
        .: {}
        k:{"name":"rev.validation.istio.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: sail-operator
    operation: Update
    time: "2025-07-15T19:29:46Z"
  name: istio-validator-istio-system
  ownerReferences:
  - apiVersion: sailoperator.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: IstioRevision
    name: default
    uid: 7dcc2e5a-4806-4fbb-b8c7-d8ff38160463
  resourceVersion: "2523"
  uid: 5dff4abb-aed5-4827-b4d1-d69aa7def5cf
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUxqUVNYc0JsQ1ZTMXZLU1lYQzMxdkV3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU5UQTNNVFV4T1RJNE1UZGFGdzB6TlRBMwpNVE14T1RJNE1UZGFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRERzM3N0b3h6MXNWQmFpak43c3JGMzZ5Vy94VjNPdnNOK3g1TFgKZ0VOa3JJWGRvOUNZS3JDRnNNRzJHNTJTTXdUeWZZWWhiM2hyaG8xWjZpU1ppREJieUU3MFd3aTByT3p4WlFkcgozcWsxSGhvS0JRTz [...]
    service:
      name: istiod
      namespace: istio-system
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: rev.validation.istio.io
  namespaceSelector: {}
  objectSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: In
      values:
      - default
  rules:
  - apiGroups:
    - security.istio.io
    - networking.istio.io
    - telemetry.istio.io
    - extensions.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
